[workspace]
members = [".", "fuzz", "venndb-macros", "venndb-usage"]

[package]
description = "an in-memory database in Rust for rows queried using bit (flag) columns"
edition = "2021"
homepage = "https://github.com/plabayo/venndb"
license = "MIT OR Apache-2.0"
name = "venndb"
readme = "README.md"
repository = "https://github.com/plabayo/venndb"
keywords = ["database", "db", "memory", "bits"]
categories = ["database"]
authors = ["Glen De Cauwsemaecker <glen@plabayo.tech>"]
version = "0.5.0"
rust-version = "1.75.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bitvec = "1.0.1"
hashbrown = "0.15.1"
rand = "0.8.5"
venndb-macros = { version = "0.5.0", path = "venndb-macros" }

[dev-dependencies]
divan = "0.1.14"
itertools = "0.13.0"
sqlite = "0.36.0"

[[bench]]
name = "proxydb"
harness = false
