[package]
name = "venndb-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4", features = ["arbitrary-derive"] }

[dependencies.venndb]
path = ".."

[[bin]]
name = "fuzz_employee_db"
path = "fuzz_targets/fuzz_employee_db.rs"
test = false
doc = false
bench = false
