[package]
description = "macros for venndb, cannot be used directly"
edition = "2021"
homepage = "https://venndb.rs"
license = "MIT OR Apache-2.0"
name = "venndb-macros"
readme = "README.md"
repository = "https://github.com/plabayo/venndb"
keywords = ["database", "db", "memory", "bits"]
categories = ["database", "db"]
authors = ["Glen De Cauwsemaecker <glen@plabayo.tech>"]
version = "0.1.1"
rust-version = "1.75.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

[lib]
proc-macro = true
