[package]
description = "macros for venndb, cannot be used directly"
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
name = "venndb-macros"
readme = "README.md"
repository = { workspace = true }
keywords = ["database", "db", "memory", "bits"]
categories = ["database"]
authors = { workspace = true }
version = { workspace = true }
rust-version = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
